<resources>
    <string name="app_name">Engineer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_hint">example@domain.com</string>
    <string name="password_hint">password</string>
    <string name="password_confirmation_hint">password confirmation</string>
    <string name="login_button">Sign in</string>
    <string name="register_button">Sign up</string>
    <string name="register_failed_message">Sign up failed</string>
    <string name="login_failed_message">Sign in failed</string>
    <string name="register_success_message">Sign up success</string>
    <string name="login_success_message">Sign in success</string>
    <string name="logout_title">Logout</string>
    <string name="default_building_name">Building Name</string>
    <string name="default_short_building_description">Its short building description</string>
    <string name="title_of_building_list">Your Organization Buildings List</string>
    <string name="select_photo_button">Select photo</string>
    <string name="building_name_hint">Building name</string>
    <string name="building_short_description_hint">Short description</string>
    <string name="building_description_hint">Description</string>
    <string name="save_building_failed">Name can not be empty</string>
    <string name="delete_building_title">Delete</string>
    <string name="delete_building_msg">Are you sure to delete this building and all connected elements with it?</string>
    <string name="delete_positive_btn">Yes, sure</string>
    <string name="delete_negative_btn">No</string>
    <string name="building_delete_confirmed">Building has been deleted</string>
    <string name="building_delete_declined">The deletion has been canceled</string>
    <string name="default_room_name">Room Name</string>
    <string name="default_short_room_description">Its short room description</string>
    <string name="title_of_room_list">Your Organization Room List</string>
    <string name="room_name_hint">Room name</string>
    <string name="room_short_description_hint">Room description</string>
    <string name="room_description_hint">Description</string>
    <string name="save_room_failed">Name can not be empty</string>
    <string name="delete_room_msg">Are you sure to delete this room and all connected elements with it?</string>
    <string name="room_delete_confirmed">Room has been deleted</string>
    <string name="room_delete_declined">The deletion has been canceled</string>
    <string name="delete_room_title">Delete</string>
    <string name="edit_building_btn">Edit building</string>
    <string name="edit_building_pressed">Building edit option has been chosen</string>
    <string name="edit_room_pressed">Room edit option has  been chosen</string>
    <string name="edit_room_btn">Edit room</string>
    <string name="management_title">Management Center</string>
    <string name="preview_btn">Preview</string>
    <string name="management_btn">Manage</string>
    <string name="bookings_btn">Bookings</string>
    <string name="preview_title">Preview</string>
    <string name="book_btn">Book</string>
    <string name="book_all_btn">Book the whole room</string>
    <string name="manage_desks_title">Room</string>
    <string name="manage_desks_desc">This is the place where you can add new equipment or remove existing equipment.</string>
    <string name="add_new_btn">Add</string>
    <string name="remove_btn">Remove</string>
    <string name="equipment_name">Equipment name</string>
    <string name="room_name">Room name</string>
    <string name="booking_date">DD-MM-YYYY</string>
    <string name="start_hour_label">Start:</string>
    <string name="start_hour">12:00</string>
    <string name="end_hour_label">End:</string>
    <string name="end_hour">13:00</string>
    <string name="bookings_label">Bookings</string>
    <string name="start_hour_btn">Set start hour</string>
    <string name="end_hour_btn">Set end hour</string>
    <string name="date_pick_failed">You cannot pick a date from the past.</string>
    <string name="time_pick_failed">The end hour cannot be earlier than the start hour.</string>
    <string name="room_booking_failed">This period of time is not available.</string>
    <string name="booking_completed">Booking completed</string>
    <string name="booking_failed">Booking failed</string>
</resources>